darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_number_integer_with_min.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"number(integer; min(0))\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "minimum": 0,
      "type": "integer"
    }
  },
  "type": "object"
}
