darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_numberlike.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"numberlike\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "anyOf": [
        {
          "type": "number"
        },
        {
          "pattern": "^-?\\d+(\\.\\d+)?$",
          "type": "string"
        }
      ]
    }
  },
  "type": "object"
}
