darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_string.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"string\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "type": "string"
    }
  },
  "type": "object"
}
