darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_string_not_empty.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"string(not-empty)\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "pattern": "\\S",
      "type": "string"
    }
  },
  "type": "object"
}
