darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_string_pattern.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"string(pattern(^[a-z]+$))\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "pattern": "^[a-z]+$",
      "type": "string"
    }
  },
  "type": "object"
}
