darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_time.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
assertion_line: 70
expression: "convert_atom(\"time\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "format": "time",
          "type": "string"
        }
      ]
    }
  },
  "type": "object"
}
