darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_url_bare.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"url\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "format": "uri",
      "type": "string"
    }
  },
  "type": "object"
}
