darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_atom_with_description.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: "convert_atom(\"string(required) -> The author's full name\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "description": "The author's full name",
      "type": "string"
    }
  },
  "required": [
    "field"
  ],
  "type": "object"
}
